# pdf-helper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pdf_img_tool/: __init__.py  cli.py  crop.py  crop_core.py  crop_gui.py  extract.py  models.py  pipeline.py  typer_app.py  utils.py
tests/: test_crop_core.py  test_crop_planning.py  test_selection_rotation_math.py
